tests/baselines/reference/trailingSeparatorInFunctionCall.errors.txt
==== tests/cases/compiler/trailingSeparatorInFunctionCall.ts (2 errors) ====
    function f(x, y) {
    }
    
    f(1, 2, );
          ~
!!! error TS1009: Trailing comma not allowed.
    
    function f2<T>(x: T, y: T) {
    }
    
    f2(1, 2, );
           ~
!!! error TS1009: Trailing comma not allowed.